# CS3237_Group23

./: .gitignore  README.md  SERVER.md  Sensor_readings.py  collecting_readings.py  combined_sensor_readings.py  data.csv  mqtt_stuff.py  pyproject.toml  readings_on_demand.py  requirements.txt
up_goer/: __init__.py  b_shawn.csv  cli.py  g_shawn.csv
up_goer/ahrs/: ahrs.py
up_goer/cc2650/: __init__.py  cc2650.py
up_goer/cfg/: cfg.py
up_goer/computer/: computer.py
up_goer/core/: data_structures.py
up_goer/csv/: csv.py
up_goer/gateway/: gateway.py
up_goer/logger/: logger.py
up_goer/mqtt/: mqtt.py  mqtt_stuff.py
up_goer/server_logger/: server_logger.py
up_goer/spammer/: spammer.py
up_goer/utils/: utils.py
